# algorithm

./: .dockerignore  .env.development  .gitignore  Dockerfile  README.md  decision_strategy.py  decision_tree.py  docker-compose.yml  install.bat  install.sh  pyproject.toml  requirements.txt
doc/: 路面决策系统参数设计方案.docx
doc/roadevaluationalg/__MACOSX/: ._roadevaluationalg
doc/roadevaluationalg/__MACOSX/roadevaluationalg/: ._.idea  ._suog_road_maintenance_planning.R  ._test1.R
doc/roadevaluationalg/roadevaluationalg/: .RData  .Rhistory  test1.R
doc/算法/__MACOSX/算法/: ._.~桥梁评价算法改造升级方案.pptx  ._桥梁评价算法改造升级方案.pptx
doc/算法/__MACOSX/算法/桥梁评价/: ._文档  ._评价接口源码交付
doc/算法/__MACOSX/算法/路面评价/: ._.~250523预测算法说明书.docx  ._.~250524决策算法说明书.docx  ._20250312多源数据整合模块开发需求.docx  ._20250523预测算法说明书.docx  ._20250524决策算法说明书.docx  ._副本20250524决策算法说明书(1).docx  ._网络安全自查报告-生产资源.docx  ._路面养护决策算法  ._道路长周期养护规划模块打包文件
doc/算法/算法/: .~桥梁评价算法改造升级方案.pptx  桥梁评价算法改造升级方案.pptx
doc/算法/算法/桥梁评价/合同/: 桥梁平台技术服务合同.docx
doc/算法/算法/桥梁评价/文档/: 土建结构对接-2022-05-18.html  (+2 more)
doc/算法/算法/路面评价/: 20250312多源数据整合模块开发需求.docx  20250523预测算法说明书.docx  20250524决策算法说明书.docx  副本20250524决策算法说明书(1).docx  网络安全自查报告-生产资源.docx
examples/: demo_decision_strategy.py
road_algorithm/: __init__.py  decision_strategy.py
service/: wsgi.py
service/app/: __init__.py
service/app/api/: routes.py
service/app/core/: config.py  redis_client.py
service/app/models/: decision_strategy.py  static_road.py
service/app/services/: decision_service.py  register_service.py
service/app/utils/: redis_utils.py
tests/: test_decision_strategy.py
(+546 files in other folders)
