[project]
name = "road-algorithm"
version = "0.1.0"
description = "Road maintenance decision strategy"
authors = [{name = "Aria"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["road", "maintenance", "decision"]

dependencies = [
	"Flask>=3.0.0,<4.0.0",
	"redis>=5.0.0,<6.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
road-algorithm-api = "service.wsgi:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["service"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "-q"
testpaths = ["tests"]
